# archi-zoom

./: .gitignore  Cargo.toml  Makefile  Readme.md
src/: events.rs  js_utils.rs  lib.rs
src/zoom/: matrix.rs  mod.rs  svg_view_controller.rs
web/: index.html
web/diagrams/: Makefile  root.dot  server.dot
web/js/: utils.js
